--- a/THANKS
+++ b/THANKS
@@ -78,6 +78,7 @@
   Christian Biesinger		cbiesinger@web.de
   Christoph Egger		Christoph_Egger@gmx.de
   Christopher Hulbert		cchgroupmail@gmail.com
+  Craig Tierney			Craig.Tierney@noaa.gov
   Dalibor Topic			robilad@kaffe.org
   Daniel Reed			n@ml.org
   DJ Delorie			dj@delorie.com
