--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ New in 2.2.??: 2008-08-??: git version 2.2.5a, Libtool team:
     on GNU/Linux.
   - Support cross compile of MinGW with Wine.
   - Initial support for cegcc (Windows CE/PocketPC) cross compilation.
+  - Initial support for lf95 (Lahey Fortran 8.1) on GNU/Linux.
 
 * Bug fixes:
 
