--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-09-06  Gary V. Vaughan  <gary@gnu.org>
+
+	Fix 'DISTCHECK_CONFIGURE_FLAGS=--program-prefix=g' bug.
+	* tests/testsuite.at (_LIBTOOLIZE_TRANSFORM): Fix test failures
+	with --program-prefix, where the test case output contains the
+	transformed name somewhere other than the beginning of a line.
+	* libtoolize.m4sh (func_check_macros): Be sure to always use
+	the transformed name in output messages.
+
 2008-09-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Do not remove .gcno files when linking.
@@ -11,12 +20,12 @@
 	Revert 75142db4f8afc65ba7aae0ed80ea0b35bd9cc382 (AIX libltdl
 	dlopen(NULL)
 
-	libltdl/m4/ltdl.m4: Remove LTDL_DLOPEN_SELF_WORKS define.
-	libltdl/loaders/dlopen.c: Remove LTDL_DLOPEN_SELF_WORKS check.
-	libltdl/m4/libtool.m4 [aix]: Set export_dynamic_flag_spec to
+	* libltdl/m4/ltdl.m4: Remove LTDL_DLOPEN_SELF_WORKS define.
+	* libltdl/loaders/dlopen.c: Remove LTDL_DLOPEN_SELF_WORKS check.
+	* libltdl/m4/libtool.m4 [aix]: Set export_dynamic_flag_spec to
 	-Wl,-bexpall. This is a temporary workaround until a real fix
 	is implemented.
-	NEWS: document it.
+	* NEWS: document it.
 
 2008-08-26  Peter O'Gorman  <peter@pogma.com>
 
