--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 2.2.??: 2008-08-??: git version 2.2.5a, Libtool team:
+New in 2.2.6 2008-09-05: git version 2.2.5a, Libtool team:
 
 * New features:
 
@@ -13,6 +13,7 @@ New in 2.2.??: 2008-08-??: git version 2.2.5a, Libtool team:
 
   - Fixes for ifort on Darwin, and newer Intel compilers (icc 10, ifort 9)
     on GNU/Linux.
+  - Fixes for cwrapper (cygwin/mingw) under -stdc=c99.
   - Support cross compile of MinGW with Wine.
   - Initial support for cegcc (Windows CE/PocketPC) cross compilation.
   - Initial support for lf95 (Lahey Fortran 8.1) on GNU/Linux.
@@ -26,6 +27,12 @@ New in 2.2.??: 2008-08-??: git version 2.2.5a, Libtool team:
 
   - Revert "lt_dlopen(NULL) works on AIX again.". It was not the
     correct fix.
+
+  - Diagnose '-L' arguments correctly.
+
+  - Libtool no longer tries to open devices as files in execute mode.
+
+  - Libtool no longer removes *.gcno profile information from GCC.
 
 New in 2.2.4: 2008-05-04: git version 2.2.3a, Libtool team:
 
