--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 2.2.8 2008-??-??: git version 2.2.7a, Libtool team:
+
+* Bug fixes:
+
+  - Nothing yet...
+
 New in 2.2.6 2008-09-05: git version 2.2.5a, Libtool team:
 
 * New features:
