--- a/HACKING
+++ b/HACKING
@@ -699,7 +699,7 @@ or obtained by writing to the Free Software Foundation, Inc.,
   and `make distcheck CC=g++'
   If there are any problems, fix them and start again.
 
-* Run ./commit from the source tree.
+* Run `./commit -p' from the source tree.
 
 * Run `make -fMakefile.maint git-dist' (or `make -f../Makefile.maint
   git-dist' if you are running from a VPATH build directory, where `../'
@@ -725,7 +725,7 @@ or obtained by writing to the Free Software Foundation, Inc.,
 
 * Update NEWS, ChangeLog.
 
-* Run ./commit.
+* Run `./commit -p --tags', to push the new changes and tags to origin.
 
 * Update the webpages, libtool.html will need to indicate the latest
   release number.
