--- a/THANKS
+++ b/THANKS
@@ -101,6 +101,7 @@
   Joerg Sonnenberger		joerg@netbsd.org
   John Bowler			jbowler@acm.org
   Joseph Beckenbach III		jrb3@best.com
+  Karl Berry			karl@freefriends.org
   Kenneth Albanowski		kjahds@kjahds.com
   Kevin Ryde			user42@zip.com.au
   Kurt D. Zeilenga		Kurt@OpenLDAP.Org
