--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 2.2.8 2008-??-??: git version 2.2.7a, Libtool team:
 
+* New features:
+
+  - Libtool ships and installs man pages for libtool and libtoolize now.
+  - New libtool command line flag --help-all.
+
 * Bug fixes:
 
   - Nothing yet...
