Fix Autoconf 2.59 incompatibilty.
* libltdl/m4/ltdl.m4 (_LTDL_SETUP): m4_pattern_allow
`LT_LIBEXT'; Autoconf 2.59's AC_DEFINE* macros didn't do this
automatically yet.
* NEWS, THANKS: Update.
Report by Marcel Loose.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/THANKS
+++ b/THANKS
@@ -109,6 +109,7 @@
   Manfred Weichel		Manfred.Weichel@pdb.siemens.de
   Marc Espie			espie@nerim.net
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
+  Marcel Loose			loose@astron.nl
   Mark Kettenis			kettenis@phys.uva.nl
   Michael Haubenwallner		michael.haubenwallner@salomon.at
   Mike Frysinger		vapier@gentoo.org
