--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-10-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix Autoconf 2.59 incompatibilty.
+	* libltdl/m4/ltdl.m4 (_LTDL_SETUP): m4_pattern_allow
+	`LT_LIBEXT'; Autoconf 2.59's AC_DEFINE* macros didn't do this
+	automatically yet.
+	* NEWS, THANKS: Update.
+	Report by Marcel Loose.
+
 2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Atomic shared library install permissions on HP-UX.
