--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,8 @@ New in 2.2.8 2008-??-??: git version 2.2.7a, Libtool team:
 
 * Bug fixes:
 
-  - Nothing yet...
+  - Fix 2.2.6 regression that prevented using the libltdl macros together
+    with Autoconf 2.59 (`possibly undefined macro: LT_LIBEXT').
 
 New in 2.2.6 2008-09-05: git version 2.2.5a, Libtool team:
 
