--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2008-10-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/testsuite.at (_LTDL_PROJECT_FILES): Fix dependencies for
+	parallel make.
+
 	* libtoolize.m4sh (func_nonemptydir_p): Fix typo in error
 	message.
 
