--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2008-11-12  Paolo Bonzini  <bonzini@gnu.org>
+
+	* configure.ac: Bump Autoconf requirement.
+	* libltdl/config/general.m4sh: Use $as_echo as default $ECHO.
+	* tests/testsuite.at: Use $as_echo as default $ECHO.
+
+	* libltdl/m4/libtool.m4 (LT_INIT): Add _LT_SHELL_INIT to
+	work around Autoconf <2.64 bug.
+	(_LT_OUTPUT_LIBTOOL_COMMANDS_INIT): Add func_fallback_echo.
+	Eliminate lt_ECHO requoting.
+	(_LT_SHELL_INIT): Use a public M4sh diversion.
+	(_LT_PROG_ECHO_BACKSLASH): Rewrite.
+	(LT_CMD_MAX_LEN): Do not use --fallback-echo.
+	* libltdl/config/ltmain.m4sh: Remove --no-reexec and --fallback-echo
+	handling.
+	(func_fallback_echo): New.
+	(func_emit_wrapper_part1): Quote ECHO.  Remove --no-reexec and
+	--fallback-echo handling.
+	(Execute mode): Do not set qecho.
+
 2008-11-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Use -no-undefined in install tests.
