--- a/THANKS
+++ b/THANKS
@@ -67,6 +67,7 @@
   their time and energy in helping to track down bugs, port to new systems,
   and generally assist in the libtool maintainership process:
 
+  Alexei Sheplyakov		varg@theor.jinr.ru
   Andreas Schwab		schwab@suse.de
   Andrey Slepuhin		pooh@msu.ru
   Aneesh Kumar K.V		kvaneesh@hotmail.com
