--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-11-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Update to GFDL 1.3.
+	* doc/fdl.texi: Update to GFDL 1.3.
+	* doc/libtool.texi: Adjust.
+	* NEWS: Update.
+
 2008-11-09  Alexei Sheplyakov  <varg@theor.jinr.ru>  (tiny change)
 
 	Fix cross compilation with wine for the case SHELL != bash.
