--- a/THANKS
+++ b/THANKS
@@ -128,6 +128,7 @@
   Robert Ögren			lists@roboros.com
   Roberto Bagnara		bagnara@cs.unipr.it
   Roland Mainz			roland.mainz@nrubsig.org
+  Roumen Petrov			bugtrack@roumenpetrov.info
   Sam Thursfield		ssssam@gmail.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
   Simon Josefsson		jas@extundo.com
