--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Do not use `test ... -a ...'.
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [hpux10, hpux11]:
+	Replace test -a with test && test.
+
 2008-11-11  Roumen Petrov  <bugtrack@roumenpetrov.info>  (tiny change)
 
 	Fix destdir tests in cross compile mode.
