--- a/THANKS
+++ b/THANKS
@@ -82,6 +82,7 @@
   Craig Tierney			Craig.Tierney@noaa.gov
   Dalibor Topic			robilad@kaffe.org
   Daniel Reed			n@ml.org
+  Daniel Richard G.		skunk@iSKUNK.ORG
   DJ Delorie			dj@delorie.com
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
   Erez Zadok			ezk@shekel.mcl.cs.columbia.edu
