--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-15  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	Add func_win32_import_lib_p.
+	* libltdl/config/ltmain.m4sh (func_win32_import_lib_p):
+	New function.
+
 2008-11-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix archive_cmds for older cc on HP-UX 11.
